fix css on mobile

--- a/style.css
+++ b/style.css
@@ -613,13 +613,11 @@ header.slideIn {
   }
 
   #arrow {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    position: relative;
     width: 90px;
     height: 70px;
-    margin: 0 auto;
+    margin: auto;
   }
 
   .content-container > h1 {
@@ -729,13 +727,11 @@ header.slideIn {
   }
 
   #arrow {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    position: relative;
     width: 90px;
     height: 70px;
-    margin: 0 auto;
+    margin: auto;
   }
 
   .content-container > h1 {
